# pisilinux-theme-maia

./: CMakeLists.txt  README.md  yapılacaklar
colors/: Maia.colors
icons/: index.theme
icons/apps/scalable/: AdobeReader10
lookandfeel/: metadata.desktop
lookandfeel/contents/: defaults
lookandfeel/contents/components/: BreezeBlock.qml  UserDelegate.qml  UserList.qml
lookandfeel/contents/components/artwork/: default.face.icon  logout_primary.svgz  restart_primary.svgz  root.face.icon  shutdown_primary.svgz
lookandfeel/contents/loginmanager/: Main.qml  metadata.desktop
lookandfeel/contents/splash/: .directory  Splash.qml
lookandfeel/contents/splash/images/: pisi.svgz
maia/: CMakeLists.txt  colors  metadata.desktop
maia/icons/: .directory  network.svgz
maia/widgets/: actionbutton.svgz  bar_meter_horizontal.svgz  bar_meter_vertical.svgz  button.svgz  glowbar.svgz  listitem.svgz  media-delegate.svgz  pager.svgz  scrollbar.svgz  slider.svgz  tasks.svgz  viewitem.svgz
wallpapers/: CMakeLists.txt
wallpapers/Maia/: metadata.desktop
